- Fix bug: in some circumstances model tests failed to
  respect the sample used when estimating the model, if the
  sample had since been changed 
- Fix bug: wrong results from the "fcast" command after
  estimating an ordered probit or logit model
- Fix bug: the --output option to the "gnuplot" command was
  not being respected in the gretl console
- GUI, main window, Sample menu: add an item to print 
  details of the current sample status
- On closing GUI session, close any open graph windows 
- RATS databases: recognize weekly data
- Eviews data importer: fix recognition of the starting month
  or quarter for dated time series
- CSV data importer: recognize the rather strange represent-
  ation of dates in the IMF's International Financial
  Statistics
- Add importer for SAS "xport" data
- GUI model window: add option to view the model in equation
  format, in plain text, for simple models
- win32: update GTK+ stack to 2.16.6; update gnuplot to
  CVS as of 2009-09-13
  
8/28/2009 version 1.8.4
- Fix breakage in GUI interface for calling user-defined
  functions, plus fixes for GUI function package editor
- Patches from Mandriva: build OK with -Wformat-security,
  and respect LDFLAGS as supplied by user
- Add "to" to the list of reserved words
- Enable testing of nonlinear restrictions on simultaneous
  equation systems
- Update docs and examples for the "new style" definition
  of functions
- Small modification to GUI series editor
- Try to make path-searching a little smarter for files
  referenced in scripts
- GUI language switcher: add a workaround for platforms
  missing proper locale aliases
- Stata dta importer: try to work around missing character
  encoding information
- ODS import: fix bug 2841292
- win32: update GTK+ stack to 2.16.5

8/10/2009 version 1.8.3
- Fix bugs 2819633, 2827358, 2828349, 2833434
- $stopwatch: use times() function if available, to include
  execution time of child processes
- Add function "mreverse" to reverse rows of a matrix