@@ -24,6 +24,8 @@ version 1.8.5, in progress
   estimating an ordered probit or logit model
 - Fix bug: the --output option to the "gnuplot" command was
   not being respected in the gretl console
+- Fix bug: inconsistent handling of maximum command-line
+  length in the context of loops
 - GUI, main window, Sample menu: add an item to print 
   details of the current sample status
 - On closing GUI session, close any open graph windows 
@@ -36,6 +38,8 @@ version 1.8.5, in progress
 - Add importer for SAS "xport" data
 - GUI model window: add option to view the model in equation
   format, in plain text, for simple models
+- $hausman accessor: make this available for panel models
+  estimated via the random effects estimator
 - win32: update GTK+ stack to 2.16.6; update gnuplot to
   CVS as of 2009-09-13
   
